Moved the index.html to /beta during renovations

--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
----
-layout: main
-title:
----
-<div id="info">
-  <h1 class="title">Hops</h1>
-  <h2 class="subtitle">Track your beer</h2>
-  <p>
-    <ul class="features">
-      Features:
-      <li>Track and rate the beers you drink</li>
-      <li>Keep detailed tasting notes</li>
-      <li>Save photos of your beer</li>
-      <li>Sort by date, name, brewery, style, brewery location, and rating.</li>
-      <li>Search your log for a beer</li>
-      <li>Share your beer via Twitter, Facebook, Tumblr, or Email</li>
-    </ul>
-</div>
-<div id="screenshots">
-  <img src="/images/iPhone_4_Vert.png" height="600" id="iphone-mockup">
-</div>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<title>Hops - {{ page.title }}</title>
+	<base ref="http://hopsapp.com" />
+	<meta name="author" content="Gordon Fontenot" />
+	<meta name="description" content="Hops for iOS" />
+</head>
+<body>
+
+<p>Pardon our dust while we renovate.</p>
+
+<p>Hops can be downloaded from the app store <a href="http://click.linksynergy.com/fs-bin/stat?id=q6EUHJI0HeE&offerid=146261&type=3&subid=0&tmpid=1826&RD_PARM1=http%253A%252F%252Fitunes.apple.com%252Fus%252Fapp%252Fhops%252Fid429052313%253Fmt%253D8%2526uo%253D4%2526partnerId%253D30">Here</a></p>
+
+</body>
+</html>
