Remove the liquid template from the homepage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Hops - {{ page.title }}</title>
+	<title>Hops</title>
 	<base ref="http://hopsapp.com" />
 	<meta name="author" content="Gordon Fontenot" />
 	<meta name="description" content="Hops for iOS" />
