work on index styling

--- a/beta/index.html
+++ b/beta/index.html
@@ -2,20 +2,21 @@
 layout: main
 title: Home
 ---
-<div id="info">
-  <h1 class="title">Hops</h1>
-  <h2 class="subtitle">Track your beer</h2>
-  <p>
-    <ul class="features">
-      Features:
-      <li>Track and rate the beers you drink</li>
-      <li>Keep detailed tasting notes</li>
-      <li>Save photos of your beer</li>
-      <li>Sort by date, name, brewery, style, brewery location, and rating.</li>
-      <li>Search your log for a beer</li>
-      <li>Share your beer via Twitter, Facebook, Tumblr, or Email</li>
-    </ul>
-</div>
-<div id="screenshots">
-  <img src="/images/iPhone_4_Vert.png" height="600" id="iphone-mockup">
-</div>
+<table>
+  <tr>
+    <td><img src="/images/iPhone_4_Vert.png" height="600" id="iphone-mockup"></td>
+    <td>
+      <h1 class="title">Hops</h1>
+      <h2 class="subtitle">Track your beer</h2>
+      <ul class="features">
+        Features:
+        <li>Track and rate the beers you drink</li>
+        <li>Keep detailed tasting notes</li>
+        <li>Save photos of your beer</li>
+        <li>Sort by date, name, brewery, style, brewery location, and rating.</li>
+        <li>Search your log for a beer</li>
+        <li>Share your beer via Twitter, Facebook, Tumblr, or Email</li>
+      </ul>
+    </td>
+  </tr>
+</table>
