add app banner to index

--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>Hops</title>
-	<base ref="http://hopsapp.com" />
-	<meta name="author" content="Gordon Fontenot" />
-	<meta name="description" content="Hops for iOS" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="apple-itunes-app" content="app-id=429052313" />
+  <title>Hops</title>
+  <meta name="author" content="Gordon Fontenot" />
+  <meta name="description" content="Hops for iOS" />
 </head>
 <body>
 
 <p>Pardon our dust while we renovate.</p>
-
-<p>Hops can be downloaded from the app store <a href="http://click.linksynergy.com/fs-bin/stat?id=q6EUHJI0HeE&offerid=146261&type=3&subid=0&tmpid=1826&RD_PARM1=http%253A%252F%252Fitunes.apple.com%252Fus%252Fapp%252Fhops%252Fid429052313%253Fmt%253D8%2526uo%253D4%2526partnerId%253D30">Here</a></p>
 
 </body>
 </html>
