add link to app store

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 
 <p>Pardon our dust while we renovate.</p>
 
+<a href="http://itunes.apple.com/us/app/hops/id429052313">Download Hops from the App Store</a>
+
 </body>
 </html>
